fix 采购商边框颜色，validate z-index

--- a/static/css/kendo.store.css
+++ b/static/css/kendo.store.css
@@ -954,7 +954,7 @@ div.k-window-content {padding-top:20px;}
 
 .k-tooltip-validation {
     background-color:transparent;
-    z-index:auto;
+    z-index:1;
 }
 
 .k-state-selected {
