--- a/static/css/store.css
+++ b/static/css/store.css
@@ -865,9 +865,9 @@ input[type=checkbox],input[type=radio] { margin-right:3px; vertical-align: text-
 
 .normal_txt,.large_txt {border:1px solid #bbb;line-height:23px;height:23px;font-size:12px;}
 .large_txt {height:30px;line-height:30px;font-size:18px;font-weight:bold;}
-.gray-border {border:1px solid #e1e1e1;}
-.gray-border-left {border-left:1px solid #e1e1e1;}
-.gray-border-right {border-right:1px solid #e1e1e1;}
+.gray-border {border:1px solid #bbb;}
+.gray-border-left {border-left:1px solid #bbb;}
+.gray-border-right {border-right:1px solid #bbb;}
 .orange-border-top {border-top: 1px solid #f1634c;}
 
 .btn_area {position:absolute;right:20px;bottom:60px;}
